kubernetes/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
      - "alekseev-roman-022.k8s.praktikum-services.tech"
  rules:
  - host: "alekseev-roman-022.k8s.praktikum-services.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
